# fsb_ssg

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
science/: README.md
science/pipeline/: analyze.py  build_cache.py  combine_masks.py  ground_truth.py  method_d.py  nmt_covariance.py  predict_transfer.py  run_masked.py  run_pipeline.sh  simlib.py
science/report/: bispectrum_test.tex  optimal_weights.tex
src/fsb_ssg/: __init__.py  config.py  estimator.py  kernels.py  noise.py  transforms.py
tests/: conftest.py  test_config.py  test_estimator.py  test_kernels.py  test_noise.py  test_transforms.py  test_weights.py
